--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-    
+    <p1>Lorem ipsum dolor sit amet consectetur.</p1>
+    <ul>
+<li> <a href="01/index.html">lesson 1</a></li>
+
+
+
+    </ul>
 </body>
 </html>
