--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p1>Lorem ipsum dolor sit amet consectetur.</p1>
+    <p1>my homework.</p1>
     <ul>
 <li> <a href="01/index.html">lesson 1</a></li>
+<li><a href="02/index.html">lesson 2</a></li>
+
 
 
 
