--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
 <li> <a href="01/index.html">lesson 1</a></li>
 <li><a href="02/index.html">lesson 2</a></li>
-
+<li><a href="03/index.html">lesson 3</a></li>
 
 
 
