editet homewor and added a new lesson

--- a/03/index.html
+++ b/03/index.html
@@ -12,15 +12,31 @@
 
 <body>
     <Nav>
-        
-        <iframe width="1042" height="586"
-            src="https://www.youtube.com/embed/dEBVe8Ij7JU?list=PLytQ0YczAfcdj-OUqWO20vPsr0ix0M1Us"
-            title="Front-End розробка. Сучасні тренди" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+
+        <header>
+            <nav>
+                <ul>
+
+                    <li><a href="#elements">Семантичні елементи в HTML5</a></li>
+                    <li><a href="#browser">Підтримка браузерів</a></li>
+                    <li><a href="#new">Нові семантичні елементи в HTML5</a></li>
+                    <li><a href="#section">HTML5 &lt;section&gt; елемент</a></li>
+                    <li><a href="#article">HTML5 &lt;article&gt; елемент</a></li>
+                    <li><a href="#header">HTML5 &lt;header&gt; елемент</a></li>
+                    <li><a href="#footer">HTML5 &lt;footer&gt; елемент</a></li>
+                    <li><a href="#video">Відео-урок</a></li>
+                    <li><a href="#cv">CV</a></li>
+
+
+
+
+                </ul>
+            </nav>
+        </header>
         <hr>
     </Nav>
     <header>
+        <a id="elements"></a>
         <h1>HTML5 Семантичні елементи</h1>
         <p>Семантичний елемент чітко описує його значення як для браузера, так і
             для розробника.<br>
@@ -28,20 +44,24 @@
             про його вміст.<br>
             Приклади семантичних елементів: &lt;form&gt;, &lt;table&gt; і &lt;article&gt;- чітко
             визначає його зміст.</p>
+            <a href="#">вверх</a>
     </header>
     <hr>
     <main>
         <section>
+            <a id="browser"></a>
             <h2>Підтримка браузерів</h2>
-            <img src="image_2022-10-06_20-51-56.png" width="250" alt="" />
+            <img src="/03/images/image_2022-10-06_20-51-56.png" width="250" alt="" />
             <p>Семантичні елементи HTML5 підтримуються у всіх сучасних браузерах.<br>
                 Крім того, ви можете "навчити" старих браузерів, як обробляти "невідомі
                 елементи".<br>
                 Прочитайте про це в <a href="https://www.blogger.com/onboarding" target="_blank">підтримці браузера
                     HTML5</a></p>
+                    <a href="#">вверх</a>
         </section>
         <hr>
         <section>
+            <a id="new"></a>
             <h2>Нові семантичні елементи в HTML5</h2>
             <p>HTML5 пропонує нові семантичні елементи для визначення різних частин
                 веб-сторінки:</p>
@@ -52,21 +72,23 @@
                 <li>&lt;footer&gt;</li>
 
             </ul>
-
+            <a href="#">вверх</a>
         </section>
         <hr>
         <section>
+            <a id="section"></a>
             <h2>HTML5 &lt;section&gt; елемент</h2>
             <p>Елемент &it;section&gt; визначає розділ в документі.<br>
                 Згідно з документацією в3к'с HTML5: "розділ представляє собою
                 тематичну угруповання контенту, зазвичай з заголовком".<br>
                 Домашня сторінка зазвичай може бути розділена на розділи для
                 ознайомлення, змісту і контактної інформації.</p>
-            <img src="image_2022-10-06_21-41-13.png" width="" alt="">
-
+            <img src="/03/images/image_2022-10-06_21-41-13.png" width="" alt="">
+            <a href="#">вверх</a>
         </section>
         <hr>
         <section>
+            <a id="article"></a>
             <h2>HTML5 &lt;article&gt; елемент</h2>
             <p>Елемент &lt;article&gt; визначає незалежний, автономний вміст.<br>
                 Стаття повинна мати сенс самостійно, і вона повинна мати можливість
@@ -79,39 +101,52 @@
 
             </ul>
 
-            <img src="image_2022-10-06_22-05-24.png" alt="">
-
+            <img src="/03/images/image_2022-10-06_22-05-24.png" alt="">
+            <a href="#">вверх</a>
         </section>
         <hr>
         <section>
+            <a id="header"></a>
             <h2>HTML5 &lt;header&gt; елемент</h2>
             <p>Елемент &lt;header&gt; задає заголовок для документа або розділу.<br>
                 Елемент &lt;header&gt; повинен використовуватися в якості контейнера для
                 вступного змісту.<br>
                 В одному документі може бути кілька елементів &lt;header&gt;.<br>
                 У наступному прикладі визначається заголовок для статті:</p>
-            <img src="image_2022-10-06_22-08-28.png" alt="">
-
+            <img src="/03/images/image_2022-10-06_22-08-28.png" alt="">
+            <a href="#">вверх</a>
         </section>
 
         <hr>
         <section>
+            <a id="footer"></a>
             <h2>HTML5 &lt;footer&gt; елемент</h2>
             <p>Елемент &lt;footer&gt; вказує нижній колонтитул для документа або розділу.<br>
                 Нижній колонтитул зазвичай містить автора документа, інформацію про
                 авторське право, посилання на умови використання, контактні дані і т.д.<br>
                 В одному документі може бути кілька елементів &lt;footer&gt;.</p>
-            <img src="image_2022-10-06_22-10-33.png" alt="">
+            <img src="/03/images/image_2022-10-06_22-10-33.png" alt="">
+            <a href="#">вверх</a>
         </section>
 
         <hr>
+        <article>
+            <a id="video"></a>
+            <iframe width="1042" height="586"
+                src="https://www.youtube.com/embed/dEBVe8Ij7JU?list=PLytQ0YczAfcdj-OUqWO20vPsr0ix0M1Us"
+                title="Front-End розробка. Сучасні тренди" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe></article>
+                <a href="#">вверх</a>
+        <hr>
+        <article>
+            <a id="cv"></a>
+            <iframe src="https://olyaglk.github.io/course/02/index.html" height="500" width="500"
+                title="my CV"></iframe></article>
+                <a href="#">вверх</a>
     </main>
 
-    <footer>
 
-        <iframe src="https://olyaglk.github.io/course/02/index.html" height="500" width="500" title="my CV"></iframe>
-
-    </footer>
 
 
 
