--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <li> <a href="01/index.html">lesson 1</a></li>
 <li><a href="02/index.html">lesson 2</a></li>
 <li><a href="03/index.html">lesson 3</a></li>
-
-
+<li><a href="04/index.html">lesson 4</a></li>
 
     </ul>
 </body>
