--- a/04/index.html
+++ b/04/index.html
@@ -32,7 +32,7 @@
         <a id="Home"></a>
         <h1>Denis Novik</h1>
         <p class="aligncenter">
-            <img src="/assets/images/photo.png" width="970px" height="387px" alt="">
+            <img src="/04/assets/images/photo.png" width="970px" height="387px" alt="">
         </p>
 
         <section>
