--- a/04/index.html
+++ b/04/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
         <a id="Home"></a>
         <h1>Denis Novik</h1>
         <p class="aligncenter">
-            <img src="/04/assets/images/photo.png" width="970px" height="387px" alt="">
+            <img src="/04/photo.png" width="970px" height="387px" alt="">
         </p>
 
         <section>
@@ -57,7 +57,7 @@
             <p>I work in such programs as</p>
             <p class="aligncenter">
                 <br>
-                <img src="/04/assets/images/product-list.svg" alt="">
+                <img src="/04/product-list.svg" alt="">
             </p>
             <br>
         </section>
@@ -68,18 +68,18 @@
             <br>
             <p class="aligncenter">
 
-                <img src="/04/assets/images/Fashion-Store.png" alt="">
+                <img src="/04/Fashion-Store.png" alt="">
             </p>
             <div><a class="a_port" href="" alt="">Online fashion store - Homepage</a></div>
 
             <br>
             <p class="aligncenter">
-                <img src="/04/assets/images/reebok_web.png" alt="">
+                <img src="/04/reebok_web.png" alt="">
             </p>
             <div><a class="a_port" href="" alt="">Reebok Store - Concept</a></div>
             <br>
             <p class="aligncenter">
-                <img src="/04/assets/images/braun-landing.png" alt="">
+                <img src="/04/braun-landing.png" alt="">
             </p>
             <div> <a class="a_port" href="" alt="">Braun Landing Page - Concept</a></div><br>
         </section>
@@ -90,14 +90,14 @@
             You are welcome!</p>
         <br>
         <p class="aligncenter">
-            <img src="/04/assets/images/button.png" alt="">
+            <img src="/04//button.png" alt="">
         </p>
         <br>
         <p>
-            <a href="#"><img src="/04/assets/images/linkedin.svg" alt=""></a>
-            <a href="#"><img src="/04/assets/images/instagram.svg" alt=""></a>
-            <a href="#"><img src="/04/assets/images/behance.svg" alt=""></a>
-            <a href="#"><img src="/04/assets/images/dribbble.svg" alt=""></a>
+            <a href="#"><img src="/04/linkedin.svg" alt=""></a>
+            <a href="#"><img src="/04/instagram.svg" alt=""></a>
+            <a href="#"><img src="/04/behance.svg" alt=""></a>
+            <a href="#"><img src="/04/dribbble.svg" alt=""></a>
         </p> <br>
         <p class="p_footer"> Like me on<br>
             LinkedIn, Instagram, Behance, Dribble</p><br>
