--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <li><a href="02/index.html">lesson 2</a></li>
 <li><a href="03/index.html">lesson 3</a></li>
 <li><a href="04/index.html">lesson 4</a></li>
+<li><a href="05/index.html">lesson 5</a></li>
     </ul>
 </body>
 </html>
