--- a/04/index.html
+++ b/04/index.html
@@ -35,40 +35,38 @@
             <img src="/04/photo.png" width="970px" height="387px" alt="">
         </p>
 
-        <section>
-            <a id="About me"></a>
-            <br>
-            <h2>About me</h2>
-            <br>
-            <p>Hi, I'm Denis – UX/UI designer from Minsk.<br>
-                I'm interested in design and everything connected with it.</p>
-            <br>
-            <p>I'm studying at courses "Web and mobile design <br>
-                interfaces" in IT-Academy.</p>
-            <br>
-            <p>Ready to implement excellent projects<br>
-                with wonderful people.</p>
-        </section>
+        <section class="about gray-bg">
+            <div class="conteiner">
+                <h2 class="content">About me</h2>
+                <a id="About me"></a>
+                <div class="content"></div>
+                <p>Hi, I'm Denis – UX/UI designer from Minsk. <br>
+                    I'm interested in design and everything connected with it.</p>
 
-        <section>
+                <p> I'm studying at courses "Web and mobile design &nbsp;
+                    interfaces" in IT-Academy.</p>
+
+                <p> Ready to implement excellent projects<br>
+                    with wonderful people.</p>
+            </div>
+            </div>
+        </section>
+        <section class="skills">
+            <div class="container">
             <a id="Skills"></a>
-            <h2>Skills</h2>
-            <br>
-            <p>I work in such programs as</p>
-            <p class="aligncenter">
-                <br>
-                <img src="/04/product-list.svg" alt="">
-            </p>
-            <br>
+            <h2 class="section-title">Skills</h2>
+            <div class="content"></div>
+<p>I work in such programs as</p>
+        ТУТ ЗЫРКИ Ы ПРОГИ
+        </div>  
         </section>
 
-        <section>
-            <a id="Portfolio"></a>
-            <h2>Portfolio</h2>
-            <br>
-            <p class="aligncenter">
-
-                <img src="/04/Fashion-Store.png" alt="">
+        <section class="portfolio gray-bg">
+            <div class="container">         
+              <a id="Portfolio"></a>
+            <h2 class="section-title">Portfolio</h2>
+             
+                <img src="04/Fashion-Store.png" alt="">
             </p>
             <div><a class="a_port" href="" alt="">Online fashion store - Homepage</a></div>
 
@@ -79,9 +77,10 @@
             <div><a class="a_port" href="" alt="">Reebok Store - Concept</a></div>
             <br>
             <p class="aligncenter">
-                <img src="/04/braun-landing.png" alt="">
+                <img src="04/braun-landing.png" alt="">
             </p>
             <div> <a class="a_port" href="" alt="">Braun Landing Page - Concept</a></div><br>
+        </div>
         </section>
     </main>
     <footer id="Contacts">
@@ -90,14 +89,14 @@
             You are welcome!</p>
         <br>
         <p class="aligncenter">
-            <img src="/04//button.png" alt="">
+            <img src="04//button.png" alt="">
         </p>
         <br>
         <p>
-            <a href="#"><img src="/04/linkedin.svg" alt=""></a>
-            <a href="#"><img src="/04/instagram.svg" alt=""></a>
-            <a href="#"><img src="/04/behance.svg" alt=""></a>
-            <a href="#"><img src="/04/dribbble.svg" alt=""></a>
+            <a href="#"><img src="04/linkedin.svg" alt=""></a>
+            <a href="#"><img src="04/instagram.svg" alt=""></a>
+            <a href="#"><img src="04/behance.svg" alt=""></a>
+            <a href="#"><img src="04/dribbble.svg" alt=""></a>
         </p> <br>
         <p class="p_footer"> Like me on<br>
             LinkedIn, Instagram, Behance, Dribble</p><br>
