--- a/01/index.html
+++ b/01/index.html
@@ -6,38 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<head>
+  <title></title>
+  <style>
+  a.class1
+  {
+     color: blue;
+  }
+  a[href="#"]
+  {
+     color: green;
+  }
+  a[href="#"] 
+  {
+     color: red;
+  }
+  </style>
+</head>
 <body>
-
-  <a href="about.html">ENG</a>
-
-<h1>Резюме</h1>
- 
-<p><b><u>Особисті дані</u></b></p>  
-<ul>
-<li>Ім'я та прізвище: <b>Ольга Галюк</b></li>
-<li>Місто проживання: <b>Івано-Франківськ</b></li>
-<li>Номер телефону: <b>+380688658476</b> </li>
-<li>Gmail: <b>olya6837@gmail.com</b></li>
-
-</ul>
- 
-<img src="photo.jpg" width="250"  alt="" />
-
- <p><b><u>Соціальні мережі:</u></b></p>
-  <ul>
-    <li><a href="https://www.instagram.com/_glk.__/" target="_blank" >Instagram </a></li>
-   <li><a href="https://www.facebook.com/profile.php?id=100085967686733" target="_blank" >Facebook </a></li>
-   
-</ul>
- 
-
-
-<p>Студентка 1-го курсу на спеціальності 121"Інженерія програмного забезпечення" заочна форма навчання. 
-  Получила повну середню освіту в Гімназії №2. Маю високий середній бал зі всіх предметів.
-  Живу в Івано-Франківську. Володію англійською мовою(рівень b2), українською.
-  </p>
-
-
-
+<a class="class1" href="#">?</a>
 </body>
-</html>
