--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <li><a href="03/index.html">lesson 3</a></li>
 <li><a href="04/index.html">lesson 4</a></li>
 <li><a href="05/index.html">lesson 5</a></li>
+<li><a href="06/index.html">lesson 6</a></li>
     </ul>
 </body>
 </html>
