--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <p1>my homework.</p1>
     <ul>
-<li><a href="01/index.html">lesson 1</a></li>
-<li><a href="02/index.html">lesson 2</a></li>
-<li><a href="03/index.html">lesson 3</a></li>
-<li><a href="04/index.html">lesson 4</a></li>
-<li><a href="05/index.html">lesson 5</a></li>
-<li><a href="06/index.html">lesson 6</a></li>
+<li><a href="01/index.html">homework 1</a></li>
+<li><a href="02/index.html">homework 2</a></li>
+<li><a href="03/index.html">homework 3</a></li>
+<li><a href="04/index.html">homework 4</a></li>
+<li><a href="05/index.html">homework 5</a></li>
+<li><a href="06/index.html">homework 6</a></li>
     </ul>
 </body>
 </html>
