--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <li><a href="03/index.html">homework 3</a></li>
 <li><a href="04/index.html">homework 4</a></li>
 <li><a href="05/index.html">homework 5</a></li>
-<li><a href="06/index.html">homework 6</a></li>
+<li><a href="/06/index.html">homework 6</a></li>
     </ul>
 </body>
 </html>
